添加游客模式支持，允许用户在未登录状态下配置API设置，并更新相关组件以适应新功能。同时，优化了API请求的处理逻辑，确保在游客模式下能够正确使用API。

--- a/web/src/i18n/locales/en.json
+++ b/web/src/i18n/locales/en.json
@@ -1,7 +1,7 @@
 {
   "nav": {
     "home": "Home",
-    "dashboard": "Dashboard",
+    "dashboard": "Prompt Square",
     "prompts": "Prompt Management",
     "workbench": "Workbench",
     "code": "Code Generation",
@@ -198,7 +198,6 @@
     "popularity": "Popularity",
     "createdAt": "Created At",
     "updatedAt": "Updated At",
-    "deleteConfirm": "Confirm to delete this template?",
     "favorite": "Favorite",
     "unfavorite": "Unfavorite",
     "share": "Share",
@@ -206,7 +205,7 @@
     "copySuccess": "Copied successfully"
   },
   "dashboard": {
-    "title": "Dashboard",
+    "title": "Prompt Square",
     "overview": "Overview",
     "statistics": "Statistics",
     "totalPrompts": "Total Prompts",
