新增模型管理服务和API接口，支持获取聊天和图像生成模型列表，提升用户选择模型的灵活性。同时更新配置文件以支持新模型选项，确保功能完整性和用户体验流畅。

--- a/web/src/i18n/locales/en.json
+++ b/web/src/i18n/locales/en.json
@@ -1,9 +1,10 @@
 {
   "nav": {
     "home": "Home",
-    "dashboard": "Prompt Square",
-    "prompts": "Prompt Management",
+    "dashboard": "Dashboard",
+    "prompts": "Prompts",
     "workbench": "Workbench",
+    "image": "Image Generation",
     "code": "Code Generation",
     "documentation": "Documentation",
     "settings": "Settings"
