新增提示词评估功能，优化提示词生成逻辑，支持多语言回复，并改进用户界面展示。

--- a/web/src/i18n/locales/en.json
+++ b/web/src/i18n/locales/en.json
@@ -137,7 +137,18 @@
     "hideDeepReasoning": "Hide Deep Reasoning",
     "showDeepReasoning": "Show Deep Reasoning",
     "copied": "Copied to clipboard",
-    "usePrompt": "Use Prompt"
+    "usePrompt": "Use Prompt",
+    "evaluatingTitle": "Evaluating Prompt...",
+    "evaluatingDescription": "AI is analyzing the quality and effectiveness of the prompt, please wait...",
+    "evaluatingProgress": "Evaluation Progress:",
+    "evaluating": "Evaluating...",
+    "threePanelDescription": "Below shows the complete optimization result comparison and detailed evaluation:",
+    "originalPrompt": "Original Prompt",
+    "evaluationResult": "Prompt Evaluation",
+    "noEvaluation": "No evaluation result available",
+    "waitingForEvaluation": "Waiting for evaluation...",
+    "reasoningInProgress": "Reasoning in progress...",
+    "cannotCloseWhileGenerating": "Cannot close window while generating"
   },
   "prompts": {
     "title": "Prompt Management",
