新增模型评估功能，包含评估输入和结果接口，支持多模型性能评估与对比分析，优化用户界面，提升数据展示效果和用户体验。

--- a/web/src/i18n/locales/en.json
+++ b/web/src/i18n/locales/en.json
@@ -4,6 +4,7 @@
     "dashboard": "Dashboard",
     "prompts": "Prompts",
     "workbench": "Workbench",
+    "evaluation": "Model Evaluation",
     "image": "Image Generation",
     "code": "Code Generation",
     "documentation": "Documentation",
